# detective-conan

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
dev/: CMakeLists.txt
dev/env/: alias.bash.txt  alias.powershell.txt  env.ps1  env.rc
dev/test/: CMakeLists.txt  hello-world-vulkan.cpp  placeholder.txt
dev/test/shader/: infinite.comp  infinite.comp.spv  infinite.comp.spv.h  noop.comp.spv  noop.comp.spv.h
inc/: detective-conan.h
inc/detective-conan/: detective-conan.h
inc/detective-conan/base/: base.cpp
inc/detective-conan/d3d12/: detective-d3d12.cpp
inc/detective-conan/vulkan/: detective-vulkan.cpp
inc/detective-conan/vulkan/asset/: atomic-counter.comp  atomic-counter.comp.spv  atomic-counter.comp.spv.h
src/: CMakeLists.txt  detective-conan.cpp
